--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         </div>
         <div class="paddle_1 paddle"></div>
         <div class="paddle_1 paddle"></div>
-        <h1 class="player_1_score"></h1>
-        <h1 class="player_2_score"></h1>
+        <h1 class="player_1_score">0</h1>
+        <h1 class="player_2_score">0</h1>
         <h1 class="message">
             Press Enter to Play
         </h1>
     </div>
 
-    <script src=""></script>
+    <script src="index.js"></script>
 </body>
 </html>
